--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,6 +93,10 @@ a {
   text-decoration: none;
 }
 
+.navbar {
+  background-color: "dark";
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
