--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,104 +1,111 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+body {
   margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-html,
-body {
-  max-width: 100vw;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+  padding: 0.2em 0.4em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(27, 31, 35, 0.05);
+  border-radius: 6px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
+.text-slide {
+  padding: 1rem 50px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.vertical-separator {
+  margin: 1em 0;
 }
 
-.navbar {
-  background-color: "dark";
+.carousel-page {
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.carousel-page-header-container {
+  width: 100%;
+}
+
+.carousel-page-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1em;
+}
+
+.action-container {
+  padding: 0 1em;
+}
+
+.star-button-container {
+  height: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.section {
+  margin-bottom: 60px;
+}
+
+.section-header {
+  padding: 0 1em;
+}
+
+.carousel-container {
+  width: 100%;
+  height: calc(100vw * 0.8);
+}
+
+@media only screen and (min-width: 500px) and (max-width: 1280px) {
+  .carousel-container {
+    height: calc(100vw * 0.6);
+    max-height: 768px;
   }
+}
+
+@media only screen and (min-width: 1280px) {
+  .carousel-container {
+    height: 768px;
+  }
+}
+
+.carousel-container.short {
+  height: 300px;
+}
+
+.buttons {
+  margin: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.button-container {
+  margin-bottom: 10px;
+}
+
+.button-container:not(:last-child) {
+  margin-right: 10px;
+}
+
+.framed-carousel {
+  border: 5px solid #eee;
+  overflow: hidden;
+  border-radius: 10px;
+  will-change: transform;
+  mask-image: -webkit-radial-gradient(white, black);
+  box-sizing: border-box;
+}
+
+.icon-text {
+  color: white;
 }
